# ptbr-market-classification

./: .gitattributes  .gitignore  CLAUDE.md  README.md  plano_base.md  pyproject.toml
artifacts/reports/: gen1_mcnemar.csv  gen1_paired.csv  gen1_summary.csv  gen2_intra_mcnemar.csv  gen2_paired.csv  gen2_summary.csv  gen2_vs_gen1_champion.csv  gen3_paired.csv  gen3_summary.csv  gen3_vs_gen1_champion.csv  gen3_vs_gen2_champion.csv
artifacts/splits/: metadata.json  test.parquet  train.parquet  val.parquet
data/: README.md
data/raw/: folhasp.parquet
docs/: estrutura_repositorio.md  pontos_de_atencao.md  related_works.md  relatorio_gen1.md  relatorio_gen2.md  relatorio_gen3.md
notebooks/: gen1_report.ipynb  gen2_report.ipynb
notebooks/colab/: bootstrap_gen2.ipynb  bootstrap_gen3.ipynb
prompts/: gen3_v1_bin.txt  gen3_v1_mc8.txt
scripts/: build_splits.py  convert_csv_to_parquet.py  eda_splits.py  gen1_report.py  gen2_report.py  gen3_report.py  run_gen1.py  run_gen2.py  run_gen3.py
src/ptbr_market/: __init__.py  data.py  evaluation.py  gen1_classical.py  gen1_pipeline.py  gen2_bert.py  gen3_llm.py  preprocessing.py  representations.py  runs.py  targets.py  threshold.py
tests/: conftest.py  test_data.py  test_evaluation.py  test_gen1_classical.py  test_gen1_pipeline.py  test_gen2_bert.py  test_gen3_llm.py  test_preprocessing.py  test_representations.py  test_runs.py  test_threshold.py
