[project]
name = "ptbr-market-classification"
version = "0.1.0"
description = "Binary classification of Brazilian Portuguese financial news (FolhaSP)."
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.3",
    "pandas>=2.2",
    "pyarrow>=17",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "spacy>=3.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
report = [
    "ipykernel>=6",
    "jupyter>=1",
    "matplotlib>=3.9",
    "nbconvert>=7",
]
gen2 = [
    "accelerate>=0.30",
    "datasets>=2.20",
    "torch>=2.3",
    "transformers>=4.40",
]
gen3 = [
    "requests>=2.31",
    "huggingface-hub>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptbr_market"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: testes mais lentos (deselect com '-m not slow')",
    "integration: requerem o corpus real em data/raw/ (deselect com '-m not integration')",
]
